# turbo-ai-test

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .coveragerc  .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  conftest.py  docker-entrypoint-dev.sh  docker-entrypoint.sh  pyproject.toml  pytest.ini
backend/api/: asgi.py  celery.py  urls.py  wsgi.py
backend/api/settings/: __init__.py  base.py  development.py  production.py
backend/apps/auth/: __init__.py  admin.py  apps.py  authentication.py  models.py  negotiation.py  renderers.py  schema.py  serializers.py  services.py  tasks.py  throttles.py  urls.py  views.py
backend/apps/auth/migrations/: 0001_initial.py
backend/apps/auth/tests/: __init__.py  test_logout.py  test_models.py  test_serializers.py  test_services.py  test_tasks.py  test_throttles.py  test_versioning.py  test_views.py
backend/apps/notes/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/notes/migrations/: 0001_initial.py  0002_update_work_category_color.py
backend/apps/notes/tests/: __init__.py  test_models.py  test_serializers.py  test_services.py  test_views.py
docs/backend/: auth_spec.md  notes_spec.md
frontend/: .dockerignore  .prettierignore  Dockerfile  Dockerfile.dev  eslint.config.mjs  next.config.ts  package.json  proxy.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/(auth)/: actions.ts  layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/shared/: index.ts
frontend/shared/components/: button.tsx  dot.tsx  icon-button.tsx  index.ts  input.tsx  link.tsx  logout-button.tsx  query-client-provider.tsx  selector.tsx  tag.tsx
frontend/shared/lib/: category-colors.ts  cn.ts
frontend/shared/tokens/: index.css
(+31 files in other folders)
